--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -83,7 +83,7 @@
 				
 				<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 					<td colspan="2" id="footer" style="margin: 0;padding: 20px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 582px; font-size: 13px;color: #000;">
-						Questions about your order? Contact us at <a href="mailto:contact@rooja.com" style="color: #000;text-decoration: underline;">contact@rooja.com</a> or call us at (888) 727 4482.
+						Questions about your order? Contact us at <a href="mailto:contact@rooja.com" style="color: #000;text-decoration: underline;">support@rooja.in</a> or call us at +91-11-45673347 (We are open all days 10am-7pm).
 				</td></tr>
 			</table>
 			<!-- End Save for Web Slices -->
