--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -594,7 +594,14 @@ h3 .product-name {
     padding:25px 10px 15px;
     margin-top:3px;
 }
-.sideAd p{font-weight:bold;color:#fff;margin:0;background:url(../images/icons/rupee-icon.png) no-repeat left center;padding-left:28px;}
+.sideAd p, .sideAd-orange p{font-weight:bold;color:#fff;margin:0;background:url(../images/icons/rupee-icon.png) no-repeat left center;padding-left:28px;}
+
+
+.sideAd-orange {    
+	background: #C60 url(../images/bgs/teal-orange.png) no-repeat top left #a3bcbf;
+    padding:25px 10px 15px;
+    margin-top:3px;
+}
 
 .product{width:230px;height:230px;overflow:hidden;position:relative;margin-bottom:20px;}
 .product img{position:relative;}
