--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -598,7 +598,7 @@ h3 .product-name {
 
 
 .sideAd-orange {    
-	background: #C60 url(../images/bgs/teal-orange.png) no-repeat top left #a3bcbf;
+	background: #C60 url(../images/bgs/orange-corner.png) no-repeat top left #a3bcbf;
     padding:25px 10px 15px;
     margin-top:3px;
 }
