--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -21,7 +21,7 @@
 
 
 </head>
-<table id="main" style="margin: 0 auto;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;">
+<table id="main" style="margin: 0 auto;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;" width="582">
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse; width: 582px;height: 95px;"><a href="http://rooja.com"><img src="{{skin url="images/email/email-templates_01.jpg" _area='frontend'}}" alt="Rooja Fashion"></a></td>
 	</tr>
@@ -31,7 +31,7 @@
 	</tr>
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-			<table id="orderInfoHead" style="margin: 0;padding: 2px 10px;border: 0;background: #412647;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;">
+			<table id="orderInfoHead" style="margin: 0;padding: 2px 10px;border: 0;background: #412647;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;" width="582">
 			<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 				<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
 					<p class="subhead" style="font-family: Helvetica, Arial;font-weight: bold;font-size: 15px;color: #fff;">Order Number</p>
@@ -48,7 +48,7 @@
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		
-			<table id="orderInfo" style="margin: 0;padding: 0;border: 0;background: #e2e2e2;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;">
+			<table id="orderInfo" style="margin: 0;padding: 0;border: 0;background: #e2e2e2;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 582px;" width="582">
 				<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 					<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
 						{{var order.increment_id}}
@@ -66,7 +66,7 @@
 	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 
-		<table>
+		<table width="582">
 			<tr class="item-info">
 			<td>
                    	{{depend order.getIsNotVirtual()}}
