--- a/app/locale/en_US/template/email/sales/shipment_new.html
+++ b/app/locale/en_US/template/email/sales/shipment_new.html
@@ -27,7 +27,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
         <!-- [ header starts here] -->
         <table bgcolor="#FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650" style="border:1px solid #E0E0E0;">
             <tr>
-                <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var store.getFrontendName()}}"  style="margin-bottom:10px;" border="0"/></a></td>
+                <td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse; width: 650px;height: 95px;"><a href="http://rooja.com"><img src="{{skin url="images/email/email-templates_01.jpg" _area='frontend'}}" alt="Rooja Fashion"></a></td>
             </tr>
         <!-- [ middle starts here] -->
             <tr>
