RMA email text changes

--- a/app/locale/en_US/template/email/awrma/basecustomer.html
+++ b/app/locale/en_US/template/email/awrma/basecustomer.html
@@ -8,5 +8,5 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 {{var depname}}:<br />
 {{var request.getNotifyCommentText()}}
 {{/depend}}
-<p>You can view RMA by following the link <a href="{{var request.getUrl()}}">{{var request.getUrl()}}</a>.</p>
-<p>Thank you for using our RMA service.</p>
+<p>You can view your Return Request by following the link <a href="{{var request.getUrl()}}">{{var request.getUrl()}}</a>.</p>
+<p>Thank you for using our Return Service.</p>
