email to close account

--- a/app/design/frontend/default/rooja/template/customer/dashboard/info.phtml
+++ b/app/design/frontend/default/rooja/template/customer/dashboard/info.phtml
@@ -35,6 +35,7 @@
                     <?php echo $this->htmlEscape($this->getCustomer()->getName()) ?><br />
                     <?php echo $this->htmlEscape($this->getCustomer()->getEmail()) ?><br />
                     <a href="<?php echo $this->getChangePasswordUrl() ?>"><?php echo $this->__('Change Password') ?></a>
+					<p>To cancel your Rooja account, please email support@rooja.in</p>
                 </p>
             </section>
         </section>
