email to close account

--- a/app/design/frontend/base/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/base/default/template/customer/form/edit.phtml
@@ -61,6 +61,8 @@
 		   <p class="required left"><?php echo $this->__('* Required Fields') ?></p><div class="clear"></div>
 	     <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
 
+					<p>To cancel your Rooja account, please email support@rooja.in</p>
+
     </div>
     <div class="fieldset" style="display:none;">
         <h2 class="legend"><?php echo $this->__('Change Password') ?></h2>
