--- a/app/design/frontend/base/default/template/checkout/onepage-backup.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage-backup.phtml
@@ -18,73 +18,39 @@
  * versions in the future. If you wish to customize Magento for your
  * needs please refer to http://www.magentocommerce.com for more information.
  *
- * @category   design_default
- * @package    Mage
- * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
- * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @category    design
+ * @package     base_default
+ * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
+ * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+<div class="page-title">
+    <h1><?php echo $this->__('Checkout') ?></h1>
+</div>
 <script type="text/javascript" src="<?php echo $this->getJsUrl('varien/accordion.js') ?>"></script>
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <ol class="opc" id="checkoutSteps">
-<?php 
-$validate = false; 
-$_SERVER_URL = $_SERVER['SERVER_NAME'];
-$encrypt = crypt($_SERVER_URL, 'd4'); 
-$path = dirname(__FILE__);
-$file1 = $path."/qoc.txt";
-if(file_exists($file1)) {
-$lines = file($file1);
-foreach($lines as $line_num => $linetxt)
-{
-$line = $linetxt;
-if($encrypt==trim($line)) {
-$validate = true;
-break;
-}
-
-}
-}
-if(!$validate) { ?>
-<p class="required"><strong>Warning! You are using trial version of Quick One page checkout for this domain <br/>
-Contact KAM Technology at contact@kamtechco.net to activate the license</strong></p>
-<?php } ?>
-<?php $i=0; foreach($this->getSteps() as $_stepId => $_stepInfo):  $i++ ?>
-    <li id="opc-<?php echo $_stepId ?>" class="section <?php echo !empty($_stepInfo['allow'])?'allow':'' ?> <?php echo !empty($_stepInfo['complete'])?'saved':'' ?>">
+<?php $i=0; foreach($this->getSteps() as $_stepId => $_stepInfo): ?>
+<?php if (!$this->getChild($_stepId) || !$this->getChild($_stepId)->isShow()): continue; endif; $i++ ?>
+    <li id="opc-<?php echo $_stepId ?>" class="section<?php echo !empty($_stepInfo['allow'])?' allow':'' ?><?php echo !empty($_stepInfo['complete'])?' saved':'' ?>">
         <div class="step-title">
-	<span class="number"><?php echo $i ?></span>
+            <span class="number"><?php echo $i ?></span>
             <h2><?php echo $_stepInfo['label'] ?></h2>
-	    <a href="#"><?php echo $this->__('Edit') ?></a>
+            <a href="#"><?php echo $this->__('Edit') ?></a>
         </div>
-        <div id="checkout-step-<?php echo $_stepId ?>" class="step a-item"> 
+        <div id="checkout-step-<?php echo $_stepId ?>" class="step a-item" style="display:none;">
             <?php echo $this->getChildHtml($_stepId) ?>
         </div>
-
     </li>
 <?php endforeach ?>
 </ol>
-    
 <script type="text/javascript">
-//variable for loginForm
-var loginFormValue ="loggedin" ;
-
-//variables for Billing Form
-
-function onLoginSubmit() {
-//alert("Entered condition satisfied  :   "+loginFormValue);
-this.billingValidation();
-}
-
-
-
-
 //<![CDATA[
-    var accordion = new Accordion('checkoutSteps', '.head', true);
+    var accordion = new Accordion('checkoutSteps', '.step-title', true);
     <?php if($this->getActiveStep()): ?>
     accordion.openSection('opc-<?php echo $this->getActiveStep() ?>');
     <?php endif ?>
-
     var checkout = new Checkout(accordion,{
         progress: '<?php echo $this->getUrl('checkout/onepage/progress') ?>',
         review: '<?php echo $this->getUrl('checkout/onepage/review') ?>',
@@ -93,9 +59,3 @@ this.billingValidation();
     );
 //]]>
 </script>
-
-<?php if($this->isCustomerLoggedIn()): ?>
-   <?php if (!$this->customerHasAddresses()): ?>
-    echo "<script>this.billingValidation();</script>";
-    <?php endif ?>
-    <?php endif ?>
