change dir for onepage

--- a/app/design/frontend/base/default/template/checkout/success.phtml
+++ b/app/design/frontend/base/default/template/checkout/success.phtml
@@ -18,48 +18,47 @@
  * versions in the future. If you wish to customize Magento for your
  * needs please refer to http://www.magentocommerce.com for more information.
  *
- * @category   design_default
- * @package    Mage
- * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
- * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @category    design
+ * @package     base_default
+ * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
+ * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php
-if(isset($_SESSION['sessiongiftwrapper']))
-{
-$order=$this->getOrderId();
-$getvalue=$_SESSION['sessiongiftwrapper'];
-$resource = Mage::getSingleton ( 'core/resource' );
-$read = $resource->getConnection ( 'core_read' );
-
-
-$table=$resource->getTableName('sales_order_giftwrap_message');
-
-$write = Mage::getSingleton('core/resource')->getConnection('core_write');
-
-
-$write->query("insert into ".$table ." values(".$order.",'".$getvalue."')");
-$_SESSION['sessiongiftwrapper']='';
-}
-?>
-<div class="page-head">
-    <h3><?php echo $this->__('Your order has been received') ?></h3>
+<div class="page-title">
+    <h1><?php echo $this->__('Your order has been received') ?></h1>
 </div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<p><strong><?php echo $this->__('Thank you for your purchase!') ?></strong></p>
-<p>
- <?php if ($this->canPrint()) :?>
-  <?php echo $this->__('Your order # is: <a href="%s">%s</a>', $this->getViewOrderUrl(), $this->getOrderId()) ?>.<br/>
-  <?php  else :?>
-  <?php echo $this->__('Your order # is: %s', $this->getOrderId()) ?>.<br/>
-  <?php endif;?>
+<h2 class="sub-title"><?php echo $this->__('Thank you for your purchase!') ?></h2>
 
-    <?php echo $this->__('You will receive an order confirmation email with details of your order and a link to track its progress.') ?><br/>
-    <?php if ($this->canPrint()) :?>
-    <?php echo $this->__('Click <a href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
-    <?php endif;?>
-    <?php echo $this->getChildHtml() ?>
-</p>
-<div class="button-set">
-    <button type="button" class="form-button" onclick="window.location='<?php echo $this->getUrl() ?>'"><span><?php echo $this->__('Continue Shopping') ?></span></button>
+<?php if ($this->getOrderId()):?>
+<?php if ($this->getCanViewOrder()) :?>
+    <p><?php echo $this->__('Your order # is: %s.', sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getViewOrderUrl()), $this->escapeHtml($this->getOrderId()))) ?></p>
+<?php  else :?>
+    <p><?php echo $this->__('Your order # is: %s.', $this->escapeHtml($this->getOrderId())) ?></p>
+<?php endif;?>
+    <p><?php echo $this->__('You will receive an order confirmation email with details of your order and a link to track its progress.') ?></p>
+<?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>
+    <p>
+        <?php echo $this->__('Click <a href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
+        <?php echo $this->getChildHtml() ?>
+    </p>
+<?php endif;?>
+<?php endif;?>
+
+<?php if ($this->getAgreementRefId()): ?>
+    <p><?php echo $this->__('Your billing agreement # is: %s.', sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getAgreementUrl()), $this->escapeHtml($this->getAgreementRefId())))?></p>
+<?php endif;?>
+
+<?php if ($profiles = $this->getRecurringProfiles()):?>
+<p><?php echo $this->__('Your recurring payment profiles:'); ?></p>
+<ul class="disc">
+<?php foreach($profiles as $profile):?>
+<?php $profileIdHtml = ($this->getCanViewProfiles() ? sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getProfileUrl($profile)), $this->escapeHtml($this->getObjectData($profile, 'reference_id'))) : $this->escapeHtml($this->getObjectData($profile, 'reference_id')));?>
+    <li><?php echo $this->__('Payment profile # %s: "%s".', $profileIdHtml, $this->escapeHtml($this->getObjectData($profile, 'schedule_description')))?></li>
+<?php endforeach;?>
+</ul>
+<?php endif;?>
+
+<div class="buttons-set">
+    <button type="button" class="button" title="<?php echo $this->__('Continue Shopping') ?>" onclick="window.location='<?php echo $this->getUrl() ?>'"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
 </div>
