--- a/app/design/frontend/default/rooja/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/login.phtml
@@ -18,21 +18,21 @@
  * versions in the future. If you wish to customize Magento for your
  * needs please refer to http://www.magentocommerce.com for more information.
  *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @category   design_default
+ * @package    Mage
+ * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
+ * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 <div class="col2-set">
-    <?php echo $this->getChildHtml('login_before')?>
     <div class="col-1">
         <h3><?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?><?php echo $this->__('Checkout as a Guest or Register') ?><?php else: ?><?php echo $this->__('Register to Create an Account') ?><?php endif; ?></h3>
+
         <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
             <p><?php echo $this->__('Register with us for future convenience:') ?></p>
         <?php else: ?>
-            <p><strong><?php echo $this->__('Register and save time!') ?></strong><br />
-            <?php echo $this->__('Register with us for future convenience:') ?></p>
+            <strong><?php echo $this->__('Register and save time!') ?></strong><br />
+            <?php echo $this->__('Register with us for future convenience:') ?>
             <ul>
                 <li><?php echo $this->__('Fast and easy check out') ?></li>
                 <li><?php echo $this->__('Easy access to your order history and status') ?></li>
@@ -42,15 +42,17 @@
             <ul class="form-list">
                 <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
                 <li class="control">
-                    <input type="radio" name="checkout_method" id="login:guest" value="guest"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_GUEST): ?> checked="checked"<?php endif; ?> class="radio" /><label for="login:guest"><?php echo $this->__('Checkout as Guest') ?></label>
+                    <input type="radio" name="checkout_method" id="login:guest" value="guest"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Sales_Model_Quote::CHECKOUT_METHOD_GUEST): ?> checked="checked"<?php endif ?> onclick="onSelect('no')" />
+                    <label for="login:guest"><?php echo $this->__('Checkout as Guest') ?></label>
                 </li>
                 <?php endif; ?>
                 <li class="control">
-                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER || !$this->getQuote()->isAllowedGuestCheckout()): ?> checked="checked"<?php endif ?> class="radio" /><label for="login:register"><?php echo $this->__('Register') ?></label>
+                    <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Sales_Model_Quote::CHECKOUT_METHOD_REGISTER || !$this->getQuote()->isAllowedGuestCheckout()): ?> checked="checked"<?php endif ?> onclick="onSelect('yes')" />
+                    <label for="login:register"><?php echo $this->__('Register') ?></label>
                 </li>
             </ul>
-            <h4><?php echo $this->__('Register and save time!') ?></h4>
-            <p><?php echo $this->__('Register with us for future convenience:') ?></p>
+            <strong><?php echo $this->__('Register and save time!') ?></strong><br />
+            <?php echo $this->__('Register with us for future convenience:') ?>
             <ul class="ul">
                 <li><?php echo $this->__('Fast and easy check out') ?></li>
                 <li><?php echo $this->__('Easy access to your order history and status') ?></li>
@@ -60,45 +62,44 @@
         <?php endif; ?>
     </div>
     <div class="col-2">
-        <h3><?php echo $this->__('Login') ?></h3>
+        <h4><?php echo $this->__('Login') ?></h4>
         <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
         <form id="login-form" action="<?php echo $this->getPostAction() ?>" method="post">
-        <fieldset>
-            <h4><?php echo $this->__('Already registered?') ?></h4>
-            <p><?php echo $this->__('Please log in below:') ?></p>
+            <p><strong><?php echo $this->__('Already registered?') ?></strong><br />
+            <?php echo $this->__('Please log in below:') ?></p>
             <ul class="form-list">
                 <li>
-                    <label for="login-email" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
                     <div class="input-box">
+                        <label for="login-email"><?php echo $this->__('Email Address') ?> <em>*</em></label><br />
                         <input type="text" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" />
                     </div>
                 </li>
                 <li>
-                    <label for="login-password" class="required"><em>*</em><?php echo $this->__('Password') ?></label>
                     <div class="input-box">
+                        <label for="login-password"><?php echo $this->__('Password') ?> <em>*</em></label><br />
                         <input type="password" class="input-text required-entry" id="login-password" name="login[password]" />
                     </div>
                 </li>
             </ul>
-        </fieldset>
         </form>
     </div>
 </div>
 <div class="col2-set">
     <div class="col-1">
-        <div class="buttons-set">
+      <div class="buttons-set">
             <p class="required">&nbsp;</p>
-            <button type="button" class="button" onclick="checkout.setMethod();"><span><span><?php echo ($this->getQuote()->isAllowedGuestCheckout() ? $this->__('Continue') : $this->__('Register')) ?></span></span></button>
+        <!--      <button class="button" onclick="checkout.setMethod();"><span><?php echo ($this->getQuote()->isAllowedGuestCheckout() ? $this->__('Continue') : $this->__('Register')) ?></span></button>  -->
         </div>
     </div>
     <div class="col-2">
         <div class="buttons-set">
             <p class="required"><?php echo $this->__('* Required Fields') ?></p>
             <a href="<?php echo $this->getUrl('customer/account/forgotpassword') ?>" class="f-left"><?php echo $this->__('Forgot your password?') ?></a>
-            <button type="submit" class="button" onclick="onepageLogin(this)"><span><span><?php echo $this->__('Login') ?></span></span></button>
+            <button type="submit" class="button" onclick="loginForm.submit()" ><span><?php echo $this->__('Login') ?></span></button>
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
 //<![CDATA[
     var loginForm = new VarienForm('login-form', true);
@@ -109,12 +110,17 @@
             loginForm.submit();
         }
     }
-    function onepageLogin(button)
-    {
-        if(loginForm.validator && loginForm.validator.validate()){
-            button.disabled = true;
-            loginForm.submit();
-        }
-    }
 //]]>
+
+function onSelect(isRegister) {
+if(isRegister=='yes') {
+this.loginFormValue = "register";
+}
+if(isRegister=='no') {
+this.loginFormValue = "guest";
+}
+checkout.setMethod();
+this.onLoginSubmit();
+}
+
 </script>
