--- a/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
@@ -18,41 +18,44 @@
  * versions in the future. If you wish to customize Magento for your
  * needs please refer to http://www.magentocommerce.com for more information.
  *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @category   design_default
+ * @package    Mage
+ * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
+ * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 <script type="text/javascript">
-//<![CDATA[
-    var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout/onepage/savePayment') ?>');
-//]]>
+var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout/onepage/savePayment') ?>');
 </script>
 <form action="" id="co-payment-form">
-    <fieldset>
-        <?php echo $this->getChildHtml('methods') ?>
-    </fieldset>
+    <?php echo $this->getChildHtml('methods') ?>
+    <div class="tool-tip" id="payment-tool-tip" style="display:none;">
+        <div class="btn-close">
+            <a href="#" id="payment-tool-tip-close"><img src="<?php echo $this->getSkinUrl('images/btn_window_close.gif') ?>" alt="<?php echo $this->__('Close') ?>" /></a>
+        </div>
+        <div class="tool-tip-content">
+        <img src="<?php echo $this->getSkinUrl('images/cvv.gif') ?>" alt="<?php echo $this->__('Card Verification Number Visual Reference') ?>" />
+        </div>
+    </div>
 </form>
-<div class="tool-tip" id="payment-tool-tip" style="display:none;">
-    <div class="btn-close"><a href="#" id="payment-tool-tip-close" title="<?php echo $this->__('Close') ?>"><?php echo $this->__('Close') ?></a></div>
-    <div class="tool-tip-content"><img src="<?php echo $this->getSkinUrl('images/cvv.gif') ?>" alt="<?php echo $this->__('Card Verification Number Visual Reference') ?>" title="<?php echo $this->__('Card Verification Number Visual Reference') ?>" /></div>
-</div>
 <div class="buttons-set" id="payment-buttons-container">
     <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-    <p class="back-link"><a href="#" onclick="checkout.back(); return false;"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-    <button type="button" class="button" onclick="payment.save()"><span><span><?php echo $this->__('Continue') ?></span></span></button>
-    <span class="please-wait" id="payment-please-wait" style="display:none;">
-        <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?php echo $this->__('Loading next step...') ?>" title="<?php echo $this->__('Loading next step...') ?>" class="v-middle" /> <?php echo $this->__('Loading next step...') ?>
-    </span>
+    <div id="payment-buttons-container">
+      <!--  <a href="#" class="back-link" onclick="checkout.back(); return false;"><span><?php echo $this->__('Back') ?></span></a> -->
+        <button type="button" class="button" onclick="payment.save()"><span><?php echo $this->__('Confirm Payment') ?></span></button>
+        <span id="payment-please-wait" style="display:none;" class="please-wait">
+            <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
+        </span>
+    </div>
 </div>
+
 <script type="text/javascript">
 //<![CDATA[
     function toggleToolTip(event){
         if($('payment-tool-tip')){
             $('payment-tool-tip').setStyle({
-                top: (Event.pointerY(event)-560)+'px'//,
                 //left: (Event.pointerX(event)+100)+'px'
+                top: (Event.pointerY(event)-515)+'px'
             })
             $('payment-tool-tip').toggle();
         }
@@ -61,6 +64,10 @@
     if($('payment-tool-tip-close')){
         Event.observe($('payment-tool-tip-close'), 'click', toggleToolTip);
     }
+
+    $$('.cvv-what-is-this').each(function(element){
+        Event.observe(element, 'click', toggleToolTip);
+    });
 //]]>
 </script>
 <script type="text/javascript">
