--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping_method.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping_method.phtml
@@ -18,29 +18,32 @@
  * versions in the future. If you wish to customize Magento for your
  * needs please refer to http://www.magentocommerce.com for more information.
  *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @category   design_default
+ * @package    Mage
+ * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
+ * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 <form id="co-shipping-method-form" action="">
-    <div id="checkout-shipping-method-load">
+<div class="inner-box">
+    <div class="default-box" id="checkout-shipping-method-load">
         <?php echo $this->getChildHtml('available') ?>
     </div>
-    <script type="text/javascript">
-    //<![CDATA[
-        var shippingMethod = new ShippingMethod('co-shipping-method-form', "<?php echo $this->getUrl('checkout/onepage/saveShippingMethod') ?>");
-    //]]>
-    </script>
-    <div id="onepage-checkout-shipping-method-additional-load">
-        <?php echo $this->getChildHtml('additional') ?>
-    </div>
+</div>
+<script type="text/javascript">
+    var shippingMethod = new ShippingMethod('co-shipping-method-form', "<?php echo $this->getUrl('checkout/onepage/saveShippingMethod') ?>");
+</script>
+<div id="onepage-checkout-shipping-method-additional-load">
+<?php echo $this->getChildHtml('additional') ?>
+</div>
+
+
     <div class="buttons-set" id="shipping-method-buttons-container">
-        <p class="back-link"><a href="#" onclick="checkout.back(); return false;"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-        <button type="button" class="button" onclick="shippingMethod.save()"><span><span><?php echo $this->__('Continue') ?></span></span></button>
-        <span id="shipping-method-please-wait" class="please-wait" style="display:none;">
-            <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?php echo $this->__('Loading next step...') ?>" title="<?php echo $this->__('Loading next step...') ?>" class="v-middle" /> <?php echo $this->__('Loading next step...') ?>
-        </span>
-    </div>
-</form>
+        <!--  <a href="#" onclick="checkout.back(); return false;" class="back left"><?php echo $this->__('Back') ?></a> -->
+        <!--      <button type="button" class="form-button right" onclick="shippingMethod.save()"><span><?php echo $this->__('Continue') ?></span></button>  -->
+            <span id="shipping-method-please-wait" style="display:none;" class="please-wait">
+                <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
+            </span>
+	    
+        </div>
+    </form>
