--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -62,24 +62,13 @@
 </script>
 <script type="text/javascript">
 		jQuery(document).ready(function() {
-			jQuery('#brandCol1').innerfade({
+			jQuery('#brands').innerfade({
 					speed: 1000,
 					timeout: 5000,
 					type: 'random_start',
 					containerheight: '19px'
 				});
-				jQuery('#brandCol2').innerfade({
-						speed: 1000,
-						timeout: 5000,
-						type: 'random_start',
-						containerheight: '19px'
-					});
-					jQuery('#brandCol3').innerfade({
-							speed: 1000,
-							timeout: 5000,
-							type: 'random_start',
-							containerheight: '19px'
-						});
+			
 			jQuery("a.fancyboxLink").fancybox({
 					'autoScale'         : true,
 					'titleShow'		: false,
