--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -67,13 +67,13 @@
 </section><!--End Content-->
 </div>
 	<section id="brands">
-		<div id="brandCol1" class="brandCol fl">
+		<div id="brandCol1" class="">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>">
 		</div>
-		<div id="brandCol2" class="brandCol fl">
+		<div id="brandCol2" class="">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>">
 		</div>
-		<div id="brandCol3" class="brandCol last fl">
+		<div id="brandCol3" class="">
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>">
 		</div>
 	</section>
