login form stuffs

--- a/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
@@ -45,20 +45,14 @@
 </section><!--End Content-->
 </div>
 <section id="brands">
-	<div id="brandCol1" class="brandCol fl">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/boss.png') ?>" alt="Hugo Boss">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/gucci.png') ?>" alt="gucci">
+	<div id="brandCol1" class="">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>">
 	</div>
-	<div id="brandCol2" class="brandCol fl">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/fendi.png') ?>" alt="Fendi">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/versace.png') ?>" alt="versace">
+	<div id="brandCol2" class="">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>">
 	</div>
-	<div id="brandCol3" class="brandCol last fl">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/lacoste.png') ?>" alt="Lacoste">
-		<img src="<?php echo $this->getSkinUrl('images/splash/logos/diesel.png') ?>" alt="Diesel">
+	<div id="brandCol3" class="">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>">
 	</div>
 </section>
 </div>
