--- a/app/design/frontend/default/rooja/template/customer/form/unapproved.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/unapproved.phtml
@@ -44,12 +44,15 @@
 </section><!--End Content-->
 </div>
 	<section id="brands">
-		<ul>
-			<li class="one"><img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs"></li>
-			<li class="two"><img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein"></li>
-			<li class="last three"><img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry"></li>
-			
-		</ul>
+		<div id="brandCol1" class="">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>">
+		</div>
+		<div id="brandCol2" class="">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>">
+		</div>
+		<div id="brandCol3" class="">
+			<img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>">
+		</div>
 	</section>
 </div>
 
