--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -27,6 +27,8 @@
 <script type="text/javascript" src="<?php echo $this->getJsUrl('varien/accordion.js') ?>"></script>
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
+
+<section style="width:45%;">
 <ol class="opc" id="checkoutSteps">
 <?php 
 $validate = false; 
@@ -98,3 +100,4 @@ this.billingValidation();
     echo "<script>this.billingValidation();</script>";
     <?php endif ?>
     <?php endif ?>
+</div>
