--- a/app/design/frontend/base/default/template/checkout/onepage-backup2/shipping_method/additional.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage-backup2/shipping_method/additional.phtml
@@ -23,25 +23,7 @@
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-
-/**
- * @see Mage_Checkout_Block_Cart_Totals
- */
 ?>
-<?php if ($this->getTotals()): ?>
-<tfoot>
-    <?php $_colspan = $this->helper('tax')->displayCartBothPrices() ? 5 : 3; ?>
-    <?php echo $this->renderTotals(null, $_colspan); ?>
-    <?php echo $this->renderTotals('footer', $_colspan); ?>
-    <?php if ($this->needDisplayBaseGrandtotal()):?>
-    <tr>
-        <td class="a-right" colspan="<?php echo $_colspan; ?>">
-            <small><?php echo $this->helper('sales')->__('Your credit card will be charged for') ?></small>
-        </td>
-        <td class="a-right">
-            <small><?php echo $this->displayBaseGrandtotal() ?></small>
-        </td>
-    </tr>
-    <?php endif?>
-</tfoot>
+<?php if (!$this->getQuote()->isVirtual()): ?>
+    <?php echo $this->helper('giftmessage/message')->getInline('onepage_checkout', $this->getQuote(), $this->getDontDisplayContainer()) ?>
 <?php endif; ?>
