--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -27,9 +27,6 @@
 <script type="text/javascript" src="<?php echo $this->getJsUrl('varien/accordion.js') ?>"></script>
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
-
-<section style="width:470px; float:left;">
-	
 <ol class="opc" id="checkoutSteps">
 <?php 
 $validate = false; 
@@ -53,25 +50,7 @@ if(!$validate) { ?>
 <!-- <p class="required"><strong>Warning! You are using trial version of Quick One page checkout for this domain <br/>
 Contact KAM Technology at contact@kamtechco.net to activate the license</strong></p> -->
 <?php } ?>
-
-<?php $i=0; foreach($this->getSteps() as $_stepId => $_stepInfo):  $i++ ;
-
-	if ($i == 5) { ?>
-		</ol>
-		</section>
-		
-		<section style="width:470px; float:right;" class="section <?php echo !empty($_stepInfo['allow'])?'allow':'' ?> <?php echo !empty($_stepInfo['complete'])?'saved':'' ?>">
-	        <div class="step-title">
-	            <h2><?php echo $_stepInfo['label'] ?></h2>
-		    <a href="#"><?php echo $this->__('Edit') ?></a>
-	        </div>
-	        <div id="checkout-step-<?php echo $_stepId ?>" class="step a-item"> 
-	            <?php echo $this->getChildHtml($_stepId) ?>
-	        </div>
-			
-		</section>
-		
-<?php } else { ?>
+<?php $i=0; foreach($this->getSteps() as $_stepId => $_stepInfo):  $i++ ?>
     <li id="opc-<?php echo $_stepId ?>" class="section <?php echo !empty($_stepInfo['allow'])?'allow':'' ?> <?php echo !empty($_stepInfo['complete'])?'saved':'' ?>">
         <div class="step-title">
             <h2><?php echo $_stepInfo['label'] ?></h2>
@@ -82,10 +61,8 @@ Contact KAM Technology at contact@kamtechco.net to activate the license</strong>
         </div>
 
     </li>
-
-
-<?php } endforeach ?>
-
+<?php endforeach ?>
+</ol>
     
 <script type="text/javascript">
 //variable for loginForm
@@ -121,4 +98,3 @@ this.billingValidation();
     echo "<script>this.billingValidation();</script>";
     <?php endif ?>
     <?php endif ?>
-</div>
