--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -18,48 +18,49 @@
  * versions in the future. If you wish to customize Magento for your
  * needs please refer to http://www.magentocommerce.com for more information.
  *
- * @category   design_default
- * @package    Mage
- * @copyright  Copyright (c) 2008 Irubin Consulting Inc. DBA Varien (http://www.varien.com)
- * @license    http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ * @category    design
+ * @package     base_default
+ * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
+ * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<?php
-if(isset($_SESSION['sessiongiftwrapper']))
-{
-$order=$this->getOrderId();
-$getvalue=$_SESSION['sessiongiftwrapper'];
-$resource = Mage::getSingleton ( 'core/resource' );
-$read = $resource->getConnection ( 'core_read' );
 
+<h1 class="submitted">Order Submitted</h1>
 
-$table=$resource->getTableName('sales_order_giftwrap_message');
-
-$write = Mage::getSingleton('core/resource')->getConnection('core_write');
-
-
-$write->query("insert into ".$table ." values(".$order.",'".$getvalue."')");
-$_SESSION['sessiongiftwrapper']='';
-}
-?>
-<div class="page-head">
-    <h3><?php echo $this->__('Your order has been received') ?></h3>
-</div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<p><strong><?php echo $this->__('Thank you for your purchase!') ?></strong></p>
-<p>
- <?php if ($this->canPrint()) :?>
-  <?php echo $this->__('Your order # is: <a href="%s">%s</a>', $this->getViewOrderUrl(), $this->getOrderId()) ?>.<br/>
-  <?php  else :?>
-  <?php echo $this->__('Your order # is: %s', $this->getOrderId()) ?>.<br/>
-  <?php endif;?>
 
-    <?php echo $this->__('You will receive an order confirmation email with details of your order and a link to track its progress.') ?><br/>
-    <?php if ($this->canPrint()) :?>
-    <?php echo $this->__('Click <a href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
-    <?php endif;?>
-    <?php echo $this->getChildHtml() ?>
-</p>
-<div class="button-set">
-    <button type="button" class="form-button" onclick="window.location='<?php echo $this->getUrl() ?>'"><span><?php echo $this->__('Continue Shopping') ?></span></button>
-</div>
+<section id="thankYouMsg" class="fl col3">
+<?php if ($this->getOrderId()):?>
+<?php if ($this->getCanViewOrder()) :?>
+    <h4><?php echo $this->__('Your order # is: %s.', sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getViewOrderUrl()), $this->escapeHtml($this->getOrderId()))) ?></h4>
+<?php  else :?>
+    <p><?php echo $this->__('Your order # is: %s.', $this->escapeHtml($this->getOrderId())) ?></p>
+<?php endif;?>
+	<p>We have received your order and will email you with a confirmation when it ships.</p>
+
+	<p>If you have any questions or there is an error in your order, please <a class="contact" href="/contacts">Contact Us</a></p>
+<?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>
+    <p>
+        <?php echo $this->__('Click <a class="contact" href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
+        <?php echo $this->getChildHtml() ?>
+    </p>
+<?php endif;?>
+<?php endif;?>
+<button type="button" class="button" id="continueShoppingBtn" title="Return Home" onclick="window.location='/'">Return Home</button>
+</section>
+
+<section id="sharePurchase" class="right share-purchase">
+	<h3>Share Your Purchase!</h3>
+	<p>Let your friends know you scored some sweet loot on Rooja! Invite 10 friends to Rooja and get free shipping for 2 months.</p>
+	<!-- AddThis Button BEGIN -->
+	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+	<a class="addthis_button_facebook"></a>
+	<a class="addthis_button_twitter"></a>
+	<a class="addthis_button_email"></a>
+	<a class="addthis_button_google"></a>
+	<a class="addthis_bubble_style"></a>
+	</div>
+	<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
+	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
+	<!-- AddThis Button END -->
+</section>
