add footer links to splash:

--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -81,7 +81,11 @@
 <nav id="navLinks">
 	<div class="navCont">
 	<ul>
+		<li><a href="http://rooja.com">Home</a></li>
 		<li><a href="#aboutWrapper" class="fancyboxLink">About</a></li>
+		<li><a href="#">Our Story</a></li>
+		<li><a href="#">Careers</a></li>
+		<li><a href="mailto:support@rooja.in">Contact</a></li>
 		<li><a href="http://blog.rooja.com">Blog</a></li>
 	</ul>
 	
